<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="@layout/activity_main">

    <group android:checkableBehavior="none">
        <item android:title="Services milego">
            <menu>
                <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/acceuil"
                        android:title="@string/menu_home" />
                <item
                        android:id="@+id/simulation"
                        android:icon="@drawable/simulation_achat"
                        android:title="@string/menu_tools"/>
                <item
                        android:id="@+id/boutique"
                        android:icon="@drawable/btq"
                        android:title="Boutique" />

                <item
                        android:id="@+id/Compte"
                        android:icon="@drawable/gestion_compte"
                        android:title="@string/menu_gallery" />
            </menu>
        </item>

    </group>

    <group android:checkableBehavior="single">

        <item android:title="Services milego express">
            <menu>
                <item
                        android:id="@+id/login"
                        android:icon="@drawable/inscription"
                        android:title="S'inscrire sur milego" />
                <item
                        android:id="@+id/depannage"
                        android:icon="@drawable/depanage"
                        android:title="@string/menu_slideshow" />
                <item
                        android:id="@+id/credit"
                        android:icon="@drawable/reglement"
                        android:title="Reglement" />
            </menu>
        </item>


    </group>

    <item android:title="Plus">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />

            <item
                android:id="@+id/info"
                android:icon="@drawable/ic_info_24px"
                android:title="Info" />

            <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout"
                    android:title="Déconnexion" />
        </menu>
    </item>

</menu>
